disqus tag implemented & audio controls has a type optional parameter now

--- a/src/main/resources/01.md
+++ b/src/main/resources/01.md
@@ -28,3 +28,7 @@
 - [Евгений Токарев](http://github.com/strobe)
 - [Виктор Тараненко](http://github.com/viktortnk)
 - [Алексей Фомкин](http://github.com/fomkin)
+
+комментарии:
+
+   @:disqus.
