--- a/src/main/resources/02.md
+++ b/src/main/resources/02.md
@@ -36,4 +36,11 @@
 - [Алексей Романчук](http://github.com/13h3r)
 - [Вадим Челышов](http://github.com/dos65)
 - [Евгений Токарев](http://github.com/strobe)
-- [Алексей Фомкин](http://github.com/fomkin)
+- [Алексей Фомкин](http://github.com/fomkin)    
+
+комментарии:
+
+   @:disqus.
+
+
+
