parser has been extend for rss tags attributes support

--- a/src/main/resources/md/03.md
+++ b/src/main/resources/md/03.md
@@ -36,6 +36,9 @@
 
 @:disqus.
 
+@:rssTagStart tag=enclosure attr="url(/mp3/scalalaz-podcast-3.mp3);type(audio/mpeg)":{}
+@:rssTagEnd tag=enclosure.
+
 @:rssTagStart tag=title:
     Выпуск 03
 @:rssTagEnd tag=title.
@@ -46,7 +49,7 @@
     - [Multi-OS Engine](https://software.intel.com/en-us/multi-os-engine?utm_source=Multi+OS+Engine+EBlast&utm_medium=Email&utm_campaign=cmd_12657-01&utm_con$)
     - [Multi-OS Engine GitHUb](https://github.com/multi-os-engine/multi-os-engine)
     - [Akka Stream Integration - Alpakka](http://blog.akka.io/integrations/2016/08/23/intro-alpakka)
-    - [Akka Http - stable, growing and tons of opportunity](https://github.com/akka/akka-meta/issues/27)
+    - [Akka Http - stable, growing and tons of opportunity](https://.com/akka/akka-meta/issues/27)
     - [Подкаст интервью с Konrad Malawski](http://softwareengineeringdaily.com/2016/08/22/akka-reactive-streams-with-konrad-malawski/)
     - [ScalaTest и Scalactic 3.0.0](http://www.scalatest.org/release_notes/3.0.0)
 
